[package]
name = "caesarcy"
version = "0.1.1"
authors = ["Lukas Mueller <lamuller@protonmail.com>"]
description = "A Caesar-Cipher library for Rust."
license = "MIT"
repository = "https://github.com/luki/caesarcy.rs"
readme = "README.md"

[app]
name = "caesarcy"
path = "src/main.rs"

[dependencies]
