[package]
name = "caesarlib"
version = "0.1.1"
authors = ["Lukas Mueller <lamuller@protonmail.com>"]
description = "A Caesar-Cipher library for Rust."
license = "MIT"
repository = "https://github.com/luki/caesarlib.rs"
readme = "README.md"

[app]
name = "caesarlib"
path = "src/main.rs"

[dependencies]
rand = "0.3.15"
