[package]
name = "caesarlib"
version = "0.1.2"
authors = ["caesarlib org <lamuller@protonmail.com>"]
description = "A Caesar-Cipher library for Rust."
license = "MIT"
repository = "https://github.com/caesarlib/caesarlib.rs"
readme = "README.md"

[app]
name = "caesar-cli"
path = "src/main.rs"

[dependencies]
rand = "0.3.15"
clap = "2"
